--- a/PayMe/PayMe.csproj
+++ b/PayMe/PayMe.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\PayMe.Bussiness\PayMe.Bussiness.csproj" />
+    <ProjectReference Include="..\PayMe.Token\PayMe.Token.csproj" />
   </ItemGroup>
 
 </Project>
