--- a/PayMe.Entity/PayMe.Entity.csproj
+++ b/PayMe.Entity/PayMe.Entity.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="sqlSugarCore" Version="5.0.0.9" />
+  </ItemGroup>
+
 </Project>
